syntax="proto3";
option optimize_for = LITE_RUNTIME;
package Lua.Demo;
message ReqPerson
{
	string ID = 1;	
}