syntax="proto3";

package Lua;
message _ReqHeader
{	
	int32 Category = 1;
}

message _ResHeader
{	
	int32 ErrCode = 1;
}
